--- a/DOT_tmux.conf
+++ b/DOT_tmux.conf
@@ -3,24 +3,10 @@
 # I wanted so.
 
 # Set a Ctrl-b shortcut for reloading your tmux config
-bind r source-file ~/.tmux.conf
+bind r source-file ~/.tmux.conf \; display "Reloaded tmux config!"
 
 # Rename your terminals
 set -g set-titles on
-#set -g set-titles-string '#(whoami)::#h::#(curl ipecho.net/plain;echo)'
-
-# Status bar customization
-set -g status-utf8 on
-set -g status-bg black
-set -g status-fg white
-set -g status-interval 5
-#set -g status-left-length 90
-#set -g status-right-length 60
-#set -g status-left "#[fg=Green]#(whoami)#[fg=white]::#[fg=blue] \
-#    (hostname - s)#[fg=white]::##[fg=yellow]#(curl ipecho.net/plain;echo)"
-#set -g status-justify left
-#set -g status-right '#[fg=Cyan]#S #[fg=white]%a %d %b %R' 
-set -g status-right '#7H | %F'
 
 # Remap window navigation to vim
 unbind-key j
@@ -31,3 +17,141 @@ unbind-key h
 bind-key h select-pane -L
 unbind-key l
 bind-key l select-pane -R
+
+#################################
+## Status Bar Configuration:   ##
+#################################
+
+set-option -g status on
+set-option -g status-justify centre
+set-option -g status-keys vi
+set-option -g status-position bottom
+set-option -g status-style fg=colour136,bg=colour235
+set-option -g status-left-length 20
+set-option -g status-left-style default
+set-option -g status-left "#[fg=green]#H #[fg=black]• #[fg=green,bright]#(uname -r)#[default]"
+set-option -g status-right-length 140
+set-option -g status-right-style default
+#set-option -g status-right "#[fg=green,bg=default,bright]#(tmux-mem-cpu-load) "
+#set-option -ag status-right "#[fg=red,dim,bg=default]#(uptime | cut -f 4-5 -d ' ' | cut -f 1 -d ',') "
+set-option -g status-right " #[fg=white,bg=default]%a %k:%M #[default]  #[fg=blue]%Y.%m.%d"
+set-window-option -g window-status-style fg=colour244
+set-window-option -g window-status-style bg=default
+set-window-option -g window-status-current-style fg=colour166
+set-window-option -g window-status-current-style bg=default
+
+# Highlight the active window in status bar
+setw -g window-status-current-bg black
+
+# Clock
+setw -g clock-mode-colour green
+setw -g clock-mode-style 24
+
+# color settings
+# set -g default-terminal "xterm-256color"
+set -g default-terminal "screen-256color"
+set -ga terminal-overrides ",xterm-256color:Tc"
+
+# to be friendly with vim: get shift, alt, ctrl keys working
+set-option -g xterm-keys on
+
+# to avoid esc delay in vim
+set -s escape-time 0
+
+# increase scroll-back history
+set -g history-limit 5000
+
+# use vim key bindings
+setw -g mode-keys vi
+
+# increase repeat time for repeatable commands
+set -g repeat-time 1000
+
+# start window index at 1 instead of 0
+#set -g base-index 1
+
+# start pane index at 1 instead of 0
+#setw -g pane-base-index 1
+
+# highlight window when it has new activity
+setw -g monitor-activity on
+set -g visual-activity on
+
+# re-number windows when one is closed
+set -g renumber-windows on
+
+# Copy vim style
+# create 'v' alias for selecting text
+# bind Escape copy-mode
+# bind C-[ copy-mode
+# bind -T copy-mode-vi 'v' send -X begin-selection
+# # copy with 'enter' or 'y' and send to mac os clipboard: http://goo.gl/2Bfn8
+# unbind -T copy-mode-vi Enter
+# bind -T copy-mode-vi Enter send -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
+# bind -T copy-mode-vi 'y' send -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
+# # paste
+# bind p paste-buffer
+# # paste from system clipboard MacOS
+# bind C-v run \"tmux set-buffer \"$(reattach-to-user-namespace pbpaste)\"; tmux paste-buffer"
+
+# panes: window splitting
+#unbind %
+#bind | split-window -h
+#unbind '"'
+#bind - split-window -v
+
+# Switch panes with hjkl
+#bind h select-pane -L
+#bind j select-pane -D
+#bind k select-pane -U
+#bind l select-pane -R
+
+# Quick window selection
+#bind -r C-h select-window -t :-
+#bind -r C-l select-window -t :+
+
+# resize panes
+#bind -r H resize-pane -L 5
+#bind -r J resize-pane -D 5
+#bind -r K resize-pane -U 5
+#bind -r L resize-pane -R 5
+
+## Quickly switch panes
+#unbind ^J
+#bind ^J select-pane -t :.+
+
+############################
+## Status Bar
+############################
+
+# enable UTF-8 support in status bar
+set -gq status-utf8 on
+
+# set refresh interval for status bar
+set -g status-interval 10
+
+# show session, window, pane in left status bar
+#set -g status-left-length 40
+#set -g status-left '#[fg=green] #S #[fg=yellow]#I/#[fg=cyan]#P '
+
+# show hostname, date, tim 100
+#set -g status-right '#(battery -t) #[fg=cyan] %d %b %R '
+
+###########################
+# Colors
+###########################
+
+# color status bar
+#set -g status-style fg=white,bg=colour235
+
+# color of message bar
+set -g message-style fg=white,bold,bg=green
+
+# highlight current window
+#setw -g window-status-style fg=cyan,bg=colour235
+#setw -g window-status-current-style fg=white,bold,bg=red
+
+# set color of active pane
+set -g pane-border-style fg=colour240,bg=black
+set -g pane-active-border-style fg=green,bg=black
+
