new uncrustify config file

--- a/uncrustify_e.cfg
+++ b/uncrustify_e.cfg
@@ -1,6 +1,8 @@
 string_replace_tab_chars=false
 tok_split_gte=false
+disable_processing_nl_cont=false
 enable_digraphs=false
+processing_cmt_as_regex=false
 utf8_byte=false
 utf8_force=false
 sp_balance_nested_parens=false
@@ -50,6 +52,7 @@ indent_paren_nl=false
 indent_paren_after_func_def=false
 indent_paren_after_func_decl=false
 indent_paren_after_func_call=false
+indent_comma_brace=false
 indent_comma_paren=false
 indent_bool_paren=true
 indent_semicolon_for_paren=false
@@ -58,7 +61,9 @@ indent_first_for_expr=false
 indent_square_nl=false
 indent_preserve_sql=false
 indent_align_assign=true
+indent_off_after_assign=false
 indent_align_paren=true
+indent_oc_inside_msg_sel=false
 indent_oc_block=false
 indent_oc_msg_prioritize_first_colon=true
 indent_oc_block_msg_xcode_style=false
@@ -71,9 +76,12 @@ indent_token_after_brace=true
 indent_cpp_lambda_body=false
 indent_compound_literal_return=true
 indent_using_block=true
+indent_inside_ternary_operator=false
+indent_off_after_return=false
 indent_off_after_return_new=false
 indent_single_after_return=false
 indent_ignore_asm_block=false
+donot_indent_func_def_close_paren=false
 nl_collapse_empty_body=true
 nl_assign_leave_one_liners=true
 nl_class_leave_one_liners=true
@@ -84,6 +92,7 @@ nl_func_leave_one_liners=false
 nl_cpp_lambda_leave_one_liners=false
 nl_if_leave_one_liners=true
 nl_while_leave_one_liners=true
+nl_do_leave_one_liners=false
 nl_for_leave_one_liners=false
 nl_oc_msg_leave_one_liner=false
 nl_multi_line_cond=false
@@ -99,11 +108,13 @@ nl_func_def_end_multi_line=false
 nl_func_call_start_multi_line=false
 nl_func_call_args_multi_line=false
 nl_func_call_end_multi_line=false
+nl_func_call_args_multi_line_ignore_closures=false
 nl_template_start=false
 nl_template_args=false
 nl_template_end=false
 nl_oc_msg_args=false
 nl_after_semicolon=false
+nl_before_brace_open=false
 nl_after_brace_open=true
 nl_after_brace_open_cmt=true
 nl_after_vbrace_open=false
@@ -114,6 +125,7 @@ nl_define_macro=false
 nl_squeeze_paren_close=false
 nl_squeeze_ifdef=true
 nl_squeeze_ifdef_top_level=false
+nl_before_ignore_after_case=false
 nl_before_return=false
 nl_after_return=false
 nl_ds_struct_enum_cmt=false
@@ -127,6 +139,7 @@ nl_create_list_one_liner=false
 nl_split_if_one_liner=false
 nl_split_for_one_liner=false
 nl_split_while_one_liner=false
+donot_add_nl_before_cpp_comment=false
 nl_class_leave_one_liner_groups=false
 nl_after_multiline_comment=false
 nl_after_label_colon=false
@@ -154,12 +167,16 @@ align_single_line_brace=true
 align_nl_cont=true
 align_pp_define_together=false
 align_left_shift=true
+align_eigen_comma_init=false
 align_asm_colon=false
 align_oc_msg_colon_first=false
 align_oc_decl_colon=false
 align_oc_msg_colon_xcode_like=false
+cmt_reflow_indent_to_paragraph_start=false
 cmt_convert_tab_to_spaces=false
 cmt_indent_multi=true
+cmt_align_doxygen_javadoc_tags=false
+cmt_trailing_single_line_c_to_cpp=false
 cmt_c_group=false
 cmt_c_nl_start=false
 cmt_c_nl_end=false
@@ -178,16 +195,23 @@ mod_full_brace_nl_block_rem_mlcond=false
 mod_pawn_semicolon=false
 mod_full_paren_if_bool=false
 mod_remove_extra_semicolon=true
+mod_remove_duplicate_include=false
 mod_sort_case_sensitive=false
 mod_sort_import=false
 mod_sort_using=false
 mod_sort_include=false
+mod_sort_incl_import_prioritize_filename=false
+mod_sort_incl_import_prioritize_extensionless=false
+mod_sort_incl_import_prioritize_angle_over_quotes=false
+mod_sort_incl_import_ignore_extension=false
+mod_sort_incl_import_grouping_enabled=false
 mod_move_case_break=false
 mod_remove_empty_return=false
 mod_sort_oc_properties=false
 pp_indent_at_level=true
 pp_region_indent_code=false
 pp_if_indent_code=false
+pp_indent_in_guard=false
 pp_define_at_level=true
 pp_ignore_define_body=false
 pp_indent_case=true
@@ -199,21 +223,27 @@ use_indent_continue_only_once=false
 indent_cpp_lambda_only_once=false
 use_sp_after_angle_always=false
 use_options_overriding_for_qt_macros=true
+use_form_feed_no_more_as_whitespace_character=false
 input_tab_size=4
 indent_columns=4
 indent_brace=0
+indent_namespace_level=2
 indent_switch_case=4
 indent_label=1
 indent_paren_close=2
 nl_end_of_file_min=1
 nl_max=2
 nl_after_func_body=2
+nl_before_cpp_comment=0
 code_width=0
 align_var_def_span=4
-align_var_def_star_style=1
+align_var_def_star_style=0
 align_var_def_amp_style=0
-align_assign_span=1
-align_enum_equ_span=1
+align_assign_span=2
+align_assign_func_proto_span=1
+align_enum_equ_span=2
+align_var_class_span=1
+align_var_class_gap=2
 align_var_struct_span=1
 align_var_struct_gap=1
 align_struct_init_span=1
@@ -233,21 +263,22 @@ align_pp_define_gap=0
 cmt_sp_before_star_cont=0
 cmt_sp_after_star_cont=0
 pp_indent_count=0
+pp_space_count=4
 newlines=auto
 sp_arith=add
 sp_assign=add
 sp_assign_default=add
 sp_before_assign=force
-sp_after_assign=add
+sp_after_assign=force
 sp_enum_assign=add
 sp_pp_stringify=remove
 sp_bool=add
 sp_compare=add
 sp_inside_paren=remove
 sp_paren_paren=remove
-sp_before_ptr_star=add
+sp_before_ptr_star=remove
 sp_between_ptr_star=remove
-sp_after_ptr_star=remove
+sp_after_ptr_star=add
 sp_after_ptr_star_func=force
 sp_before_ptr_star_func=remove
 sp_before_byref=remove
@@ -290,6 +321,7 @@ sp_after_dc=remove
 sp_not=remove
 sp_inv=remove
 sp_member=remove
+sp_deref=remove
 sp_sign=remove
 sp_incdec=remove
 sp_before_nl_cont=add
@@ -328,4 +360,4 @@ nl_func_scope_name=remove
 nl_func_proto_type_name=remove
 nl_fdef_brace=add
 pp_indent=add
-pp_space=remove
+pp_space=add
