--- a/DOT_tmux.conf
+++ b/DOT_tmux.conf
@@ -35,13 +35,11 @@ set-option -g status-right-style default
 #set-option -g status-right "#[fg=green,bg=default,bright]#(tmux-mem-cpu-load) "
 #set-option -ag status-right "#[fg=red,dim,bg=default]#(uptime | cut -f 4-5 -d ' ' | cut -f 1 -d ',') "
 set-option -g status-right " #[fg=white,bg=default]%a %k:%M #[default]  #[fg=blue]%Y.%m.%d"
-set-window-option -g window-status-style fg=colour244
-set-window-option -g window-status-style bg=default
-set-window-option -g window-status-current-style fg=colour166
-set-window-option -g window-status-current-style bg=default
+set-window-option -g window-status-style         fg=colour244,bg=default
+set-window-option -g window-status-current-style fg=colour232,bg=colour112
 
 # Highlight the active window in status bar
-setw -g window-status-current-bg black
+#setw -g window-status-current-bg colour240
 
 # Clock
 setw -g clock-mode-colour green
